--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,10 @@
-#explicit binary content (reduced diff).
-*.exe      binary
-*.gif      binary
-*.png      binary
+*.exe            binary
+*.gif            binary
+*.png            binary
 
-#explicit Linux(\n)-EOL.
-/*.txt            text    eol=lf
-resources/*.text  text    eol=crlf
+resources/*.txt  text    eol=crlf
+/*.txt           text    eol=lf
 
-#explicit Windows(\r\n)-EOL.
-*.cmd      text    eol=crlf
-*.js       text    eol=crlf
-README.md          eol=crlf
+*.cmd            text    eol=crlf
+*.js             text    eol=crlf
+README.md                eol=crlf
